--- a/BidBuddy/BidTableViewCell.xib
+++ b/BidBuddy/BidTableViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BidTableViewCell" customModule="BidBuddy" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BidTableView" rowHeight="139" id="KGk-i7-Jjw" customClass="BidTableViewCell" customModule="BidBuddy" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BidTable" rowHeight="139" id="KGk-i7-Jjw" customClass="BidTableViewCell" customModule="BidBuddy" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="429" height="139"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -27,8 +27,8 @@
                             <constraint firstAttribute="height" constant="70" id="mnf-tZ-B1K"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="pmE-DT-tvs">
-                        <rect key="frame" x="108" y="19" width="293" height="72.5"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="pmE-DT-tvs">
+                        <rect key="frame" x="108" y="19" width="293" height="73.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swift Desire" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v32-GW-cfl">
                                 <rect key="frame" x="0.0" y="0.0" width="92" height="20.5"/>
@@ -37,13 +37,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Red Colour,2008 Model" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RHL-Y4-hn5">
-                                <rect key="frame" x="0.0" y="26.5" width="171.5" height="19.5"/>
+                                <rect key="frame" x="0.0" y="26.5" width="171.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="131" translatesAutoresizingMaskIntoConstraints="NO" id="Irl-oq-Zbd">
-                                <rect key="frame" x="0.0" y="52" width="291.5" height="20.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="Irl-oq-Zbd">
+                                <rect key="frame" x="0.0" y="53" width="264" height="20.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Bid:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j9i-R2-yeU">
                                         <rect key="frame" x="0.0" y="0.0" width="92" height="20.5"/>
@@ -51,8 +51,8 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5,00,000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SLM-c2-eXc">
-                                        <rect key="frame" x="223" y="0.0" width="68.5" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" text="5,00,000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SLM-c2-eXc">
+                                        <rect key="frame" x="172" y="0.0" width="92" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -62,10 +62,10 @@
                         </subviews>
                     </stackView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BJm-cm-fm3">
-                        <rect key="frame" x="331" y="98" width="70" height="30"/>
+                        <rect key="frame" x="311" y="98" width="90" height="30"/>
                         <color key="backgroundColor" red="0.59942874872855467" green="1" blue="0.46287618678911968" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="70" id="v67-DC-F7e"/>
+                            <constraint firstAttribute="width" constant="90" id="v67-DC-F7e"/>
                         </constraints>
                         <state key="normal" title="Bid"/>
                         <userDefinedRuntimeAttributes>
@@ -84,6 +84,7 @@
                     <constraint firstAttribute="bottomMargin" secondItem="BJm-cm-fm3" secondAttribute="bottom" id="pS0-pF-am2"/>
                     <constraint firstItem="1Hy-DR-Iuf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" symbolic="YES" id="r0v-1a-3xX"/>
                     <constraint firstItem="pmE-DT-tvs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="r2a-1T-24Z"/>
+                    <constraint firstItem="BJm-cm-fm3" firstAttribute="top" secondItem="pmE-DT-tvs" secondAttribute="bottom" constant="5.5" id="uWb-SL-kkn"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
