--- a/BidBuddy/BidTableViewCell.xib
+++ b/BidBuddy/BidTableViewCell.xib
@@ -19,9 +19,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="429" height="138.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Hy-DR-Iuf">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Swift" translatesAutoresizingMaskIntoConstraints="NO" id="1Hy-DR-Iuf">
                         <rect key="frame" x="20" y="20" width="80" height="70"/>
-                        <color key="backgroundColor" red="1" green="0.51564852991748467" blue="0.58613367266751115" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="hjX-Ld-REM"/>
                             <constraint firstAttribute="height" constant="70" id="mnf-tZ-B1K"/>
@@ -43,16 +43,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="Irl-oq-Zbd">
-                                <rect key="frame" x="0.0" y="53" width="264" height="20.5"/>
+                                <rect key="frame" x="0.0" y="53" width="293" height="20.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Bid:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j9i-R2-yeU">
-                                        <rect key="frame" x="0.0" y="0.0" width="92" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="106.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" text="5,00,000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SLM-c2-eXc">
-                                        <rect key="frame" x="172" y="0.0" width="92" height="20.5"/>
+                                        <rect key="frame" x="186.5" y="0.0" width="106.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -60,6 +60,9 @@
                                 </subviews>
                             </stackView>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="SLM-c2-eXc" secondAttribute="trailing" id="xus-ZI-I9F"/>
+                        </constraints>
                     </stackView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BJm-cm-fm3">
                         <rect key="frame" x="311" y="98" width="90" height="30"/>
@@ -91,4 +94,7 @@
             <point key="canvasLocation" x="140" y="91.304347826086968"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Swift" width="318" height="159"/>
+    </resources>
 </document>
