--- a/BidBuddy/BidTableViewCell.xib
+++ b/BidBuddy/BidTableViewCell.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BidTableViewCell" customModule="BidBuddy" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BidListViewController" customModule="BidBuddy" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BidTable" rowHeight="139" id="KGk-i7-Jjw" customClass="BidTableViewCell" customModule="BidBuddy" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="429" height="139"/>
@@ -26,6 +26,12 @@
                             <constraint firstAttribute="width" constant="80" id="hjX-Ld-REM"/>
                             <constraint firstAttribute="height" constant="70" id="mnf-tZ-B1K"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerradius">
+                                <integer key="value" value="40"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.boundsToMasks" value="YES"/>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="pmE-DT-tvs">
                         <rect key="frame" x="108" y="19" width="293" height="73.5"/>
@@ -77,6 +83,9 @@
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.boundToMasks" value="YES"/>
                         </userDefinedRuntimeAttributes>
+                        <connections>
+                            <action selector="didTapOnBid:" destination="-1" eventType="touchUpInside" id="7Tw-ds-pRY"/>
+                        </connections>
                     </button>
                 </subviews>
                 <constraints>
