--- a/BidBuddy/BidTableViewCell.xib
+++ b/BidBuddy/BidTableViewCell.xib
@@ -37,8 +37,8 @@
                         <rect key="frame" x="108" y="19" width="293" height="71.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swift Desire" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v32-GW-cfl">
-                                <rect key="frame" x="0.0" y="0.0" width="104" height="20"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                <rect key="frame" x="0.0" y="0.0" width="124" height="20"/>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
