--- a/BidBuddy/CarBid.storyboard
+++ b/BidBuddy/CarBid.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CtH-tp-0sh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CtH-tp-0sh">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,26 +19,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Side" translatesAutoresizingMaskIntoConstraints="NO" id="n7k-JA-cIH">
-                                <rect key="frame" x="37" y="66" width="300" height="300"/>
+                                <rect key="frame" x="29.5" y="66" width="300" height="250"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="5a4-uA-Yiw"/>
-                                    <constraint firstAttribute="height" constant="300" id="T8A-UJ-PgU"/>
+                                    <constraint firstAttribute="height" constant="250" id="T8A-UJ-PgU"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:   Maruti Swift" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pQ1-5H-0OB">
-                                <rect key="frame" x="37" y="377" width="222" height="21"/>
+                                <rect key="frame" x="29.5" y="327.5" width="223" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year:      2003" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fhw-5j-Y6W">
-                                <rect key="frame" x="37" y="454" width="300" height="21"/>
+                                <rect key="frame" x="29.5" y="404.5" width="300" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YaR-c7-LfS">
-                                <rect key="frame" x="186" y="484" width="151" height="30"/>
+                                <rect key="frame" x="178.5" y="434" width="151" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -50,7 +50,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Bid Amount" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ta-2l-WRU">
-                                <rect key="frame" x="37" y="488.5" width="141" height="21"/>
+                                <rect key="frame" x="29.5" y="438.5" width="141" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="141" id="2Oh-pw-B8H"/>
                                 </constraints>
@@ -59,13 +59,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Model:   Desire" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fec-6K-FfR">
-                                <rect key="frame" x="37" y="416" width="300" height="21"/>
+                                <rect key="frame" x="29.5" y="367" width="300" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XJY-wr-cnK">
-                                <rect key="frame" x="286" y="373" width="51" height="28"/>
+                                <rect key="frame" x="279.5" y="323" width="50" height="29"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Live" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RNl-EK-MmS">
                                         <rect key="frame" x="4" y="4" width="42" height="21"/>
@@ -93,7 +93,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CYe-MB-VE5">
-                                <rect key="frame" x="155" y="566" width="65" height="30"/>
+                                <rect key="frame" x="147" y="621" width="65" height="30"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="65" id="XzR-Xy-aJB"/>
@@ -103,7 +103,7 @@
                                 </state>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Remaining : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f9O-KT-OrB">
-                                <rect key="frame" x="16" y="26" width="137" height="35"/>
+                                <rect key="frame" x="16" y="26" width="138.5" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="ERQ-jH-INI"/>
                                     <constraint firstAttribute="width" constant="137" id="r79-a7-DBx"/>
@@ -113,7 +113,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wH6-L0-B5W">
-                                <rect key="frame" x="186" y="26" width="162" height="35"/>
+                                <rect key="frame" x="187.5" y="26" width="162" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="E8L-uX-CWF"/>
                                     <constraint firstAttribute="width" constant="162" id="sqO-FT-UDe"/>
@@ -126,6 +126,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="XJY-wr-cnK" firstAttribute="top" secondItem="n7k-JA-cIH" secondAttribute="bottom" constant="7" id="55n-IO-MeE"/>
+                            <constraint firstItem="DGi-kG-cdS" firstAttribute="bottom" secondItem="CYe-MB-VE5" secondAttribute="bottom" constant="16" id="60p-yH-KaH"/>
                             <constraint firstItem="Fhw-5j-Y6W" firstAttribute="top" secondItem="fec-6K-FfR" secondAttribute="bottom" constant="17" id="6oV-bj-ScJ"/>
                             <constraint firstItem="wH6-L0-B5W" firstAttribute="top" secondItem="DGi-kG-cdS" secondAttribute="top" constant="6" id="AoM-qB-z2J"/>
                             <constraint firstItem="Fhw-5j-Y6W" firstAttribute="leading" secondItem="fec-6K-FfR" secondAttribute="leading" id="C9x-3P-Qhg"/>
@@ -147,8 +148,8 @@
                             <constraint firstItem="XJY-wr-cnK" firstAttribute="trailing" secondItem="fec-6K-FfR" secondAttribute="trailing" id="nsp-Ru-2jd"/>
                             <constraint firstItem="XJY-wr-cnK" firstAttribute="trailing" secondItem="Fhw-5j-Y6W" secondAttribute="trailing" id="pXc-Ak-v6R"/>
                             <constraint firstItem="XJY-wr-cnK" firstAttribute="centerY" secondItem="pQ1-5H-0OB" secondAttribute="centerY" id="pv2-0U-3S9"/>
-                            <constraint firstItem="DGi-kG-cdS" firstAttribute="bottom" secondItem="CYe-MB-VE5" secondAttribute="bottom" constant="71" id="qP4-wJ-UBG"/>
                             <constraint firstItem="Fhw-5j-Y6W" firstAttribute="leading" secondItem="9Ta-2l-WRU" secondAttribute="leading" id="tN6-Tl-mdR"/>
+                            <constraint firstItem="DGi-kG-cdS" firstAttribute="trailing" secondItem="wH6-L0-B5W" secondAttribute="trailing" constant="10" id="uqk-Qo-4W6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="DGi-kG-cdS"/>
                     </view>
