--- a/BidBuddy/BidTableViewCell.xib
+++ b/BidBuddy/BidTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,7 +19,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="429" height="138.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Swift" translatesAutoresizingMaskIntoConstraints="NO" id="1Hy-DR-Iuf">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" image="Swift" translatesAutoresizingMaskIntoConstraints="NO" id="1Hy-DR-Iuf">
                         <rect key="frame" x="20" y="20" width="80" height="70"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -33,7 +33,7 @@
                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.boundsToMasks" value="YES"/>
                         </userDefinedRuntimeAttributes>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="pmE-DT-tvs">
+                    <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" axis="vertical" distribution="fillEqually" alignment="top" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="pmE-DT-tvs">
                         <rect key="frame" x="108" y="19" width="293" height="71.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swift Desire" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v32-GW-cfl">
@@ -94,10 +94,10 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="1Hy-DR-Iuf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" symbolic="YES" id="H40-uY-IK6"/>
-                    <constraint firstItem="pmE-DT-tvs" firstAttribute="leading" secondItem="1Hy-DR-Iuf" secondAttribute="trailing" constant="8" id="S6B-qT-ZIh"/>
                     <constraint firstAttribute="trailingMargin" secondItem="BJm-cm-fm3" secondAttribute="trailing" constant="8" id="Vno-qT-D2Z"/>
                     <constraint firstAttribute="trailingMargin" secondItem="pmE-DT-tvs" secondAttribute="trailing" constant="8" id="YBK-SC-dj3"/>
                     <constraint firstAttribute="bottomMargin" secondItem="BJm-cm-fm3" secondAttribute="bottom" id="pS0-pF-am2"/>
+                    <constraint firstItem="pmE-DT-tvs" firstAttribute="leading" secondItem="1Hy-DR-Iuf" secondAttribute="trailing" constant="8" id="qoM-1a-Cl0"/>
                     <constraint firstItem="1Hy-DR-Iuf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" symbolic="YES" id="r0v-1a-3xX"/>
                     <constraint firstItem="pmE-DT-tvs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="r2a-1T-24Z"/>
                     <constraint firstItem="BJm-cm-fm3" firstAttribute="top" secondItem="pmE-DT-tvs" secondAttribute="bottom" constant="5.5" id="uWb-SL-kkn"/>
@@ -106,6 +106,8 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="bidButton" destination="BJm-cm-fm3" id="Er7-5U-qAP"/>
+                <outlet property="carName" destination="v32-GW-cfl" id="vgf-2l-kL8"/>
+                <outlet property="carimage" destination="1Hy-DR-Iuf" id="xQb-Zb-v6H"/>
             </connections>
             <point key="canvasLocation" x="140" y="91.304347826086968"/>
         </tableViewCell>
